# switchmediaplayer

./: .gitignore  .gitmodules  CMakeLists.txt
extra/portlibs/sqlite/: PKGBUILD
include/core/: media_scan.hpp  types.hpp
include/core/db/: database.hpp
include/core/db/migration/: migration.hpp
include/ui/activity/: main_activity.hpp
include/ui/tab/: browser_tab.hpp  home_tab.hpp  music_tab.hpp  settings_tab.hpp  video_tab.hpp
include/ui/view/: album_browser.hpp  album_view.hpp  file_browser.hpp  media_browser.hpp  music_player.hpp  video_player.hpp
include/ui/view/object/: svg_button.hpp  thumb_cell.hpp  track_cell.hpp
include/util/: fs.hpp  sqlite.hpp
lib/: CMakeLists.txt
resources/i18n/en-US/: hints.json  main.json  switchmp.json
resources/xml/activity/: main.xml
resources/xml/tab/: audio.xml  video.xml
romfs/i18n/en-US/: main.json
romfs/misc/: template.db
romfs/svg/: sources.txt
romfs/xml/activity/: album_browser.xml  audio_player.xml  main.xml  media_browser.xml  video_player.xml
romfs/xml/tab/: browser_tab.xml  home.xml  home_tab.xml  music_tab.xml  settings.xml  settings_tab.xml  video.xml.old  video_tab.xml
romfs/xml/view/: album_browser.xml  album_view.xml  audio_player.xml  media_browser.xml  media_cell.xml  music_player.xml  svg_button.xml  track_cell.xml  video_player.xml
src/: main.cpp
src/core/: database.cpp  database.hpp  media_scan.cpp  mpv.cpp  mpv.hpp  path.cpp  path.hpp  scanner.cpp  scanner.hpp  tag_reader.hpp  types.hpp
src/core/db/: database.cpp  database.hpp
src/core/db/migration/: version_1.cpp  version_1.hpp
src/media/: scanner.cpp  tag_reader.cpp
src/ui/activity/: album_browser.cpp  album_browser.hpp  audio_player.cpp  audio_player.hpp  main_activity.cpp  main_activity.hpp  media_browser.cpp  media_browser.hpp  video_player.cpp  video_player.hpp
src/ui/tab/: audio_tab.cpp  audio_tab.hpp  browser_tab.cpp  home_tab.cpp  home_tab.hpp  music_tab.cpp  settings_tab.cpp  settings_tab.hpp  video_tab.cpp  video_tab.hpp
src/ui/view/: album_browser.cpp  album_browser.hpp  album_view.cpp  audio_player.cpp  audio_player.hpp  auto_tab_frame.cpp  auto_tab_frame.hpp  file_browser.cpp  h_recycling.cpp  h_recycling.hpp  media_browser.cpp  media_browser.hpp  media_cell.cpp  media_cell.hpp  media_source.cpp  media_source.hpp  music_player.cpp  music_player.hpp  recycling_grid.cpp  recycling_grid.hpp  svg_button.cpp  svg_button.hpp  svg_image.cpp  svg_image.hpp  video_player.cpp  video_player.hpp
src/ui/view/object/: svg_button.cpp  thumb_cell.cpp  track_cell.cpp
src/util/: fs.cpp  sqlite.cpp  sqlite.hpp
switchmp/include/activity/: main_activity.hpp
switchmp/include/tab/: audio.hpp  home.hpp  settings.hpp  video.hpp
switchmp/include/view/: item_box.hpp  media_cell.hpp  media_source.hpp  svg_image.hpp
switchmp/src/: main.cpp
switchmp/src/activity/: main_activity.cpp
switchmp/src/tab/: audio.cpp  home.cpp  settings.cpp  video.cpp
switchmp/src/view/: auto_tab_frame.cpp  item_box.cpp  media_cell.cpp  media_source.cpp  recycling_grid.cpp
